app-kube/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: terracloud
  labels:
    app: terracloud
  namespace: terracloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: terracloud
  template:
    metadata:
      labels:
        app: terracloud
    spec:
      containers:
      - name: terracloud
        image: terracloud
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: terracloud-mysql
  labels:
    app: terracloud-mysql
  namespace: terracloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: terracloud-mysql
  template:
    metadata:
      labels:
        app: terracloud-mysql
    spec:
      containers:
      - name: terracloud-mysql
        image: mysql
        ports:
        - containerPort: 3306
