app-kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: terracloud-ingress
  labels:
    app: terracloud-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: http
  namespace: terracloud
spec:
  rules:
  - host: 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: terracloud-service
            port: 
              number: 80
